refactor: Modularize architecture, separate Core from Default Dashboard

--- a/Horizon-Dashboard/Editor/Horizon_Default_Layout.html
+++ b/Horizon-Dashboard/Editor/Horizon_Default_Layout.html
@@ -27,7 +27,7 @@
 
         <div class="modules-stack">
             <!-- HOME -->
-            <module id="Module_Home" class="module-page">
+            <module id="Module_Home" class="module-page" u-script="HorizonGUI_HomeModule">
                 <text class="dim-text" u-bind="instanceInfoText">Loading...</text>
                 <hr />
                 <h-grid id="PlayerGrid" style="circle" pool="64" cell-w="64" cell-h="64" spacing="15"
