--- a/Horizon-Dashboard/Editor/Horizon_Default_Layout.html
+++ b/Horizon-Dashboard/Editor/Horizon_Default_Layout.html
@@ -2,32 +2,40 @@
 
     <!-- 1. SIDEBAR -->
     <div class="sidebar">
-        <button class="nav-btn" u-click="OnNavHome">
+        <button class="nav-btn" h-change="Main:Home">
             <icon src="house_with_garden.png" />
         </button>
 
-        <button class="nav-btn" u-click="OnNavWeather">
+        <button class="nav-btn" h-change="Main:Weather">
             <icon src="partly_sunny_rain.png" />
         </button>
 
         <div class="spacer"></div>
 
-        <button class="nav-btn" u-click="OnNavAbout">
+        <button class="nav-btn" h-change="Main:About">
             <icon src="information_source.png" />
         </button>
     </div>
 
     <!-- 2. CONTENT AREA -->
     <div class="content-area">
+
+        <!-- HEADER -->
         <div class="header-row">
+            <h2 h-view="Main:Home">Dashboard</h2>
+            <h2 h-view="Main:Weather">Weather Control</h2>
+            <h2 h-view="Main:About">About Horizon</h2>
+
             <div class="spacer"></div>
-            <text class="clock-text" u-bind="clockText">01 Jan, 12:00</text>
+            <text class="clock-text" u-bind="clockText">00:00</text>
         </div>
         <hr />
 
+        <!-- MODULES STACK -->
         <div class="modules-stack">
+
             <!-- HOME -->
-            <module id="Module_Home" class="module-page" u-script="HorizonGUI_HomeModule">
+            <module id="Module_Home" class="module-page" u-script="HorizonGUI_HomeModule" h-view="Main:Home">
                 <text class="dim-text" u-bind="instanceInfoText">Loading...</text>
                 <hr />
                 <h-grid id="PlayerGrid" style="circle" pool="64" cell-w="64" cell-h="64" spacing="15"
@@ -35,9 +43,8 @@
             </module>
 
             <!-- WEATHER -->
-            <module id="Module_Weather" class="module-page" style="display:none;" u-script="HorizonGUI_WeatherModule">
+            <module id="Module_Weather" class="module-page" u-script="HorizonGUI_WeatherModule" h-view="Main:Weather">
                 <scroll class="scroll-view">
-                    <h1>Weather Control</h1>
                     <div class="row status-row">
                         <text u-bind="weatherStatusText" class="dim-text">Status: Checking...</text>
                         <text class="dim-text">|</text>
@@ -70,8 +77,7 @@
             </module>
 
             <!-- ABOUT -->
-            <module id="Module_About" class="module-page" style="display:none;">
-                <h2>Horizon GUI</h2>
+            <module id="Module_About" class="module-page" h-view="Main:About">
                 <text class="dim-text">Version: 0.1.0</text>
                 <text class="dim-text">Author: Ibirtem</text>
                 <hr />
@@ -90,6 +96,7 @@
         </div>
     </div>
 
+    <!-- OVERLAY -->
     <div id="GlobalOverlay" ignore-layout u-bind="overlayContainer">
     </div>
 
