feat: Implement modular player avatar photobooth system

--- a/Horizon-Dashboard/Editor/Horizon_Default_Layout.html
+++ b/Horizon-Dashboard/Editor/Horizon_Default_Layout.html
@@ -41,6 +41,7 @@
 
                     <button class="player-slot" u-bind="mainButton">
                         <img class="player-avatar" u-bind="MainIcon" src="user_placeholder.png" />
+                        <img raw ignore-layout u-bind="AvatarRaw" />
                     </button>
 
                 </h-grid>
